Add Jextract and JavaCompile tasks in build.gradle
The wgpu4k build script has been updated with Jextract and JavaCompile tasks, enabling Java extraction from C and facilitating Java compilation. This update also includes the addition of generated Java files to the project.